<resources>
    <string name="app_name">Contacts</string>


    <string name="text_confirm">Confirmar</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_register">Registrarse</string>
    <string name="text_next">Siguiente</string>
    <string name="text_before">Anterior</string>
    <string name="text_return">Regresar</string>
    <string name="text_try_again">Volver a intentar</string>
    <string name="text_invalid_mail">Correo invalido</string>
    <string name="text_obligatory_field">Campos obligatorios</string>

    <!-- SplashScreen -->
    <string name="text_splash_screen">CONTACTS</string>

    <!-- Alerts -->
    <string name="text_message">Mensaje</string>
    <string name="text_alert">Alerta</string>
    <string name="text_yes">Si</string>
    <string name="text_no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Using in List Contacts -->
    <string name="text_list_contacts_empty">Lista de contactos vacia</string>
    <string name="text_title">Lista de contactos</string>
    <string name="text_list_empty">Sin contactos</string>
    <string name="text_add_contact">Agregar contacto</string>
    <string name="text_update_contact">Actualizar contacto</string>
    <string name="text_what_operation">Que operación deseas hacer?</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_update">Actualizar</string>

    <!--  Using in add contact  -->
    <string name="text_name">Nombre</string>
    <string name="text_last_name">Apellido paterno</string>
    <string name="text_last_name_m">Apellido materno</string>
    <string name="text_age">Edad</string>
    <string name="text_phone">Teléfono</string>
    <string name="text_sex">Sexo</string>
    <string name="text_photo">Imagen</string>
    <string name="text_required_fields">Llenar los campos obligatorios</string>
    <string name="text_created_contact">Se a creado el contacto</string>
    <string name="text_updated_contact">Se a actualizado el contacto</string>

</resources>